--- a/app/src/main/res/layout/content_coinz_home.xml
+++ b/app/src/main/res/layout/content_coinz_home.xml
@@ -33,7 +33,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/MainStatement"
         app:layout_constraintVertical_bias="0.019" />
+
+    <Button
+        android:id="@+id/secondAct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Take me there.. ;)"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MainStatement" />
 
 </android.support.constraint.ConstraintLayout>
