--- a/app/src/main/res/layout/activity_map_box_main.xml
+++ b/app/src/main/res/layout/activity_map_box_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CoinzHome">
+    tools:context=".MapBoxMain">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,8 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_coinz_home" />
+    <include layout="@layout/content_map_box_main" />
 
 </android.support.design.widget.CoordinatorLayout>
