--- a/app/src/main/res/layout/content_coinz_home.xml
+++ b/app/src/main/res/layout/content_coinz_home.xml
@@ -8,46 +8,45 @@
     tools:context=".CoinzHome"
     tools:showIn="@layout/activity_coinz_home">
 
-    <TextView
-        android:id="@+id/MainStatement"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="294dp"
         android:layout_height="wrap_content"
-        android:text="@string/upslashdown"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/TallyValue"
-        android:layout_width="106dp"
-        android:layout_height="24dp"
-        android:layout_marginBottom="276dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/tallycount"
-        android:textAlignment="center"
-        android:textSize="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MainStatement"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintTop_toBottomOf="@+id/walletButton" />
 
     <Button
-        android:id="@+id/secondAct"
-        android:layout_width="wrap_content"
+        android:id="@+id/walletButton"
+        android:layout_width="294dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Take me there.. ;)"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Wallet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MainStatement" />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/playButton"
+        android:layout_width="294dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Let's Play!"
+        app:layout_constraintBottom_toTopOf="@+id/walletButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
