--- a/app/src/main/res/layout/content_map_box_main.xml
+++ b/app/src/main/res/layout/content_map_box_main.xml
@@ -15,6 +15,8 @@
         mapbox:mapbox_cameraTargetLng = "-3.1870"
         mapbox:mapbox_styleUrl = "mapbox://styles/mapbox/streets-v10"
         mapbox:mapbox_cameraZoom = "14"
-        />
+        >
+
+    </com.mapbox.mapboxsdk.maps.MapView>
 
 </android.support.constraint.ConstraintLayout>
