--- a/app/src/main/res/layout/content_map_box_main.xml
+++ b/app/src/main/res/layout/content_map_box_main.xml
@@ -7,14 +7,26 @@
     tools:context=".MapBoxMain"
     tools:showIn="@layout/activity_map_box_main">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/displayRates"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="36dp"
+        android:clickable="true"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:srcCompat="@drawable/ic_rocket_15white" />
+
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        mapbox:mapbox_cameraTargetLat = "55.9441"
-        mapbox:mapbox_cameraTargetLng = "-3.1870"
-        mapbox:mapbox_styleUrl = "mapbox://styles/mapbox/streets-v10"
-        mapbox:mapbox_cameraZoom = "14"
-        />
+        mapbox:mapbox_cameraTargetLat="55.9441"
+        mapbox:mapbox_cameraTargetLng="-3.1870"
+        mapbox:mapbox_cameraZoom="14"
+        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10">
+
+    </com.mapbox.mapboxsdk.maps.MapView>
 
 </android.support.constraint.ConstraintLayout>
