--- a/app/src/main/res/layout/content_coinz_home.xml
+++ b/app/src/main/res/layout/content_coinz_home.xml
@@ -49,4 +49,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/mapDownloadNotifier"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif"
+        android:textSize="16dp"
+        android:layout_width="292dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/mapDownloadBackgroundFALSE"
+        android:text="@string/mapProgressFALSE"
+        app:layout_constraintBottom_toTopOf="@+id/playButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
