--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
 
     <color name="mapboxWhite">#ffffff</color>
     <color name="mapboxBlue">#4264fb</color>
-    <color name="mapbpxGrayLight">#c6d2e1</color>
+    <color name="mapboxGrayLight">#c6d2e1</color>
 
     <color name="mapDownloadBackgroundFALSE">#f02050</color>
     <color name="mapDownloadBackGroundTRUE">#00FF33</color>
